[gd_scene load_steps=23 format=3 uid="uid://cjvq0hgu8aaub"]

[ext_resource type="Script" path="res://main.gd" id="1_0ua6x"]
[ext_resource type="PackedScene" uid="uid://bgtx1roha4qyo" path="res://parallax_background.tscn" id="1_cnhbg"]
[ext_resource type="PackedScene" uid="uid://dh1aqwafr4ir" path="res://hahmo.tscn" id="3_61uoo"]
[ext_resource type="Texture2D" uid="uid://cx3nylbd28rad" path="res://GFX/stouns.png" id="3_ouqgj"]
[ext_resource type="Texture2D" uid="uid://btic7mbu4fp63" path="res://GFX/parallaxii/Maalitaso 7.PNG" id="4_64rnx"]
[ext_resource type="Script" path="res://Paratrees.gd" id="5_qev0p"]
[ext_resource type="Texture2D" uid="uid://ctcsuulvcd4gm" path="res://GFX/parallaxii/Maalitaso 8.PNG" id="5_x012d"]
[ext_resource type="Texture2D" uid="uid://bg7oumanhcpvx" path="res://GFX/snoufleik0.png" id="6_6825u"]
[ext_resource type="Texture2D" uid="uid://cbhas6fbmldwi" path="res://GFX/parallaxii/Maalitaso 7b.PNG" id="7_uxt3k"]
[ext_resource type="Texture2D" uid="uid://cwe3fhd7kmmju" path="res://GFX/sasd.png" id="9_ae1dw"]
[ext_resource type="AudioStream" uid="uid://cut85wlps182r" path="res://SFX/Rainloop.wav" id="10_fxea7"]
[ext_resource type="AudioStream" uid="uid://b6ujjn8odh46w" path="res://SFX/Erämaa.ogg" id="11_ojvo8"]
[ext_resource type="Script" path="res://Menu.gd" id="12_5bcg6"]
[ext_resource type="Texture2D" uid="uid://cgwx1sxp8b0x2" path="res://GFX/ErämaaC.png" id="12_bppjw"]
[ext_resource type="Shader" path="res://hsv.gdshader" id="13_l2sum"]
[ext_resource type="Texture2D" uid="uid://b411lwhsitv3y" path="res://GFX/menu.png" id="14_nnsgh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eww77"]
size = Vector2(1920, 20)

[sub_resource type="Gradient" id="Gradient_kod00"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.116883, 0.636364, 1)
colors = PackedColorArray(0, 0, 0, 0.498039, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ig10h"]
gradient = SubResource("Gradient_kod00")
use_hdr = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6fc8y"]
emission_shape = 3
emission_box_extents = Vector3(6000, 1, 1)
particle_flag_align_y = true
spread = 82.74
flatness = 0.75
gravity = Vector3(-50, 98, 0)
initial_velocity_max = 96.78
angular_velocity_min = 92.9
angular_velocity_max = 162.58
linear_accel_max = 41.93
tangential_accel_min = 9.68
tangential_accel_max = 41.94
damping_max = 48.39
angle_max = 278.7
scale_min = 0.5
color_ramp = SubResource("GradientTexture1D_ig10h")
hue_variation_min = 0.98
hue_variation_max = 1.0
turbulence_noise_strength = 0.0
turbulence_noise_scale = 5.45
turbulence_noise_speed = Vector3(0.5, 10, 0.5)
turbulence_influence_min = 0.05
turbulence_influence_max = 0.05

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8pcy1"]
emission_shape = 3
emission_box_extents = Vector3(6000, 1, 1)
particle_flag_align_y = true
gravity = Vector3(-50, 98, 0)
damping_max = 3.22
scale_min = 0.75
scale_max = 1.5
color = Color(0.384314, 0.811765, 1, 0.886275)
color_ramp = SubResource("GradientTexture1D_ig10h")
turbulence_noise_strength = 0.0
turbulence_noise_scale = 5.45
turbulence_noise_speed = Vector3(0.5, 10, 0.5)
turbulence_influence_min = 0.05
turbulence_influence_max = 0.05

[sub_resource type="ShaderMaterial" id="ShaderMaterial_flrfx"]
shader = ExtResource("13_l2sum")
shader_parameter/h = null
shader_parameter/s = 0.8
shader_parameter/v = null

[node name="Main" type="Node2D"]
script = ExtResource("1_0ua6x")

[node name="ParallaxBackground" parent="." instance=ExtResource("1_cnhbg")]
layer = -1
offset = Vector2(960, 0)
transform = Transform2D(1, 0, 0, 1, 960, 0)

[node name="Sprite2d" type="Sprite2D" parent="."]
position = Vector2(-384, 380)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_ouqgj")

[node name="Hahmo" parent="." instance=ExtResource("3_61uoo")]
position = Vector2(0, 482)

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
layer = 100
offset = Vector2(960, 0)
transform = Transform2D(1, 0, 0, 1, 960, 0)
script = ExtResource("5_qev0p")

[node name="Trees" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_scale = Vector2(1.5, 1)
motion_mirroring = Vector2(2688, 0)

[node name="runko" type="Sprite2D" parent="ParallaxBackground2/Trees"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
position = Vector2(0, -100)
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_64rnx")
flip_h = true

[node name="srunko" type="Sprite2D" parent="ParallaxBackground2/Trees"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
position = Vector2(0, -100)
scale = Vector2(0.7, 0.7)
texture = ExtResource("7_uxt3k")
flip_h = true

[node name="liivs" type="Sprite2D" parent="ParallaxBackground2/Trees"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
position = Vector2(0, -100)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_x012d")
flip_h = true

[node name="StaticBody2d" type="RigidBody2D" parent="."]
gravity_scale = 0.0

[node name="CollisionShape2d" type="CollisionShape2D" parent="StaticBody2d"]
position = Vector2(0, 520)
shape = SubResource("RectangleShape2D_eww77")

[node name="Lunta" type="GPUParticles2D" parent="."]
position = Vector2(0, -580)
z_as_relative = false
amount = 800
lifetime = 5.0
visibility_rect = Rect2(-7000, -100, 14000, 200)
process_material = SubResource("ParticleProcessMaterial_6fc8y")
texture = ExtResource("6_6825u")

[node name="Lunta2" type="GPUParticles2D" parent="."]
position = Vector2(0, -580)
z_as_relative = false
amount = 800
lifetime = 5.0
visibility_rect = Rect2(-7000, -100, 14000, 200)
process_material = SubResource("ParticleProcessMaterial_6fc8y")
texture = ExtResource("6_6825u")

[node name="Sade" type="GPUParticles2D" parent="."]
position = Vector2(0, -580)
z_as_relative = false
amount = 2500
lifetime = 6.0
speed_scale = 3.0
visibility_rect = Rect2(-7000, -100, 14000, 200)
process_material = SubResource("ParticleProcessMaterial_8pcy1")
texture = ExtResource("9_ae1dw")

[node name="Sade2" type="GPUParticles2D" parent="."]
position = Vector2(0, -580)
z_as_relative = false
amount = 2500
lifetime = 6.0
speed_scale = 3.0
visibility_rect = Rect2(-7000, -100, 14000, 200)
process_material = SubResource("ParticleProcessMaterial_8pcy1")
texture = ExtResource("9_ae1dw")

[node name="Rainloop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_fxea7")
volume_db = 1.0
autoplay = true
max_distance = 6500.0
attenuation = 0.482968
panning_strength = 0.0

[node name="Rainloop2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_fxea7")
volume_db = 1.0
autoplay = true
max_distance = 6500.0
attenuation = 0.482968
panning_strength = 0.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ojvo8")
volume_db = -5.0
autoplay = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 120

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
material = SubResource("ShaderMaterial_flrfx")
offset_right = 1920.0
offset_bottom = 1080.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="Menu" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("12_5bcg6")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="CanvasLayer/Menu"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0

[node name="HSplitContainer" type="HSplitContainer" parent="CanvasLayer/Menu"]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Title" type="TextureRect" parent="CanvasLayer/Menu"]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("14_nnsgh")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Menu"]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Menu/HBoxContainer"]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.3
texture = ExtResource("12_bppjw")
ignore_texture_size = true
stretch_mode = 4
